arreglos, cambios de color y demas

--- a/public/components/main.html
+++ b/public/components/main.html
@@ -6,23 +6,23 @@
           Estudio Jurídico Rodriguez y Asociados
         </h1>
         <h2 class="text-texto text-lg font-medium sm:text-xl md:text-2xl lg:text-3xl">
-          Especialistas en Derecho Penal, Accidentes Laborales y <br> Accidentes de Tránsito
+          Especialistas en accidentes y enfermedades laborales, despidos, accidentes de transito, <br> derecho penal
         </h2>
       </div>
   
       <div class="mt-6 p-2 flex flex-col items-center">
-        <a class="px-4 py-2 rounded-xl border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] text-textonav font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
-          <i class="fab fa-whatsapp text-2xl mr-0.5 text-center"></i>
-            SOLICITÁ TU CONSULTA GRATUITA
+        <a href="" class="px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
+          <i class="fab fa-whatsapp text-2xl mr-0.5 text-center text-[green]"></i>
+            CONSULTANOS
           </a>
           
-        <p class="text-sm text-gray-600 mt-2">Respondemos en menos de 24hs</p>
+<!--         <p class="text-sm text-gray-600 mt-2">Respondemos en menos de 24hs</p> -->
       </div>
     </div>
   
     <div class="flex flex-col lg:flex-row justify-evenly items-center w-full gap-6 mt-10 text-center">
-      <p class="max-w-[90%] lg:max-w-[20%] text-texto text-lg lg:text-xl font-medium">
-        Somos los mas eficaces cuando hablamos de
+      <p class="max-w-[90%] lg:max-w-[20%] text-texto text-xl lg:text-2xl lg:font-bold">
+        <strong>Somos los mas eficaces cuando hablamos de</strong>
       </p>
     <!-- Ícono solo para desktop -->
     <div class="hidden lg:block">
@@ -33,7 +33,7 @@
         <i class="fas fa-arrow-down text-texto text-4xl"></i>
     </div>
     <p class="text-texto text-2xl font-bold">
-        <span id="texto-dinamico"></span>
+        <span id="texto-dinamico">Asesorarte, fijar estrategias y <br> alcanzar los objetivos buscados.</span>
       </p>
     </div>
   </main>
