--- a/public/components/sobrenos.html
+++ b/public/components/sobrenos.html
@@ -11,17 +11,11 @@
       class="border-t-2 border-texto w-15 sm:w-25 md:w-35 lg:w-45 mx-auto mb-4"
     />
     <p
-      class="text-texto font-light w-[100%] sm:w-[80%] md:w-[70%] lg:w-[50%] text-justify text-lg p-5"
+      class="text-texto font-light w-[100%] sm:w-[80%] md:w-[70%] lg:w-[50%] prose-p: prose-2xl text-justify"
     >
-      El estudio Dres. RODRIGUEZ tiene más de 25 años de trayectoria, empeñado
-      en brindar a nuestros representados un servicio profesional de eficacia,
-      contamos con un equipo de profesionales altamente capacitado, con una
-      sólida experiencia en cada una de las siguientes áreas del derecho:
-      ACCIDENTES DE TRÁNSITO; ACCIDENTES LABORALES; DESPIDOS; SUCESIONES Y
-      DERECHO PENAL, las cuales ponemos a tu disposición a través de la consulta
-      por cualquiera de los canales de comunicación. Nuestros letrados se
-      encuentran comprometido a ofrecer un servicio de calidad, basado en la
-      ética, la confidencialidad, el respeto, y profesionalismo.
+    Contamos con más de 25 años de trayectoria y experiencia, empeñado en brindar a nuestros representados un servicio profesional eficaz, que permita alcanzar los objetivos propuestos. Contamos con un equipo de profesionales altamente capacitado, con una sólida experiencia en las siguientes áreas del derecho: ACCIDENTES DE TRÁNSITO; ACCIDENTES LABORALES; DESPIDOS; SUCESIONES Y DERECHO PENAL.
+    Nuestros letrados se encuentran comprometido a ofrecer un servicio de calidad, basado en la ética, la confidencialidad, el respeto, y profesionalismo. 
+    No dudes en contactarnos a través de cualquiera de nuestros canales de comunicación.
     </p>
   </div>
 
@@ -34,28 +28,28 @@
 
     <div class="flex flex-col md:flex-row justify-center items-center gap-10">
       <!-- Tarjeta 1 -->
-      <div
-        class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center"
+<!--       <div
+        class="w-[280px] h-[150px] bg-background text-textonav border-2    rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center"
       >
         <p id="clientes" class="text-3xl font-extrabold select-none">0</p>
-        <p class="text-sm mt-1 font-medium select-none">clientes atendidos</p>
-      </div>
+        <p class="text-xl mt-1 font-medium select-none">clientes atendidos</p>
+      </div> -->
 
       <!-- Tarjeta 2 -->
       <div
-        class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center"
+        class="w-[280px] h-[150px] bg-background text-texto border-2 rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center"
       >
         <p id="experiencias" class="text-3xl font-extrabold select-none">0</p>
-        <p class="text-sm mt-1 font-medium select-none">años de experiencia</p>
+        <p class="text-xl mt-1 font-medium select-none">años de experiencia</p>
       </div>
 
       <!-- Tarjeta 3 -->
-      <div
-        class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center"
+<!--       <div
+        class="w-[280px] h-[150px] bg-background text-textonav border-2    rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center"
       >
         <p id="tasa" class="text-3xl font-extrabold select-none">0%</p>
-        <p class="text-sm mt-1 font-medium select-none">tasa de experiencia</p>
-      </div>
+        <p class="text-xl mt-1 font-medium select-none">tasa de exíto</p>
+      </div> -->
     </div>
   </div>
 </section>
