--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -8,43 +8,40 @@
       <div
         class="flex-1 min-w-[280px] max-w-xl mx-auto flex flex-col items-center"
       >
-        <h2 class="text-xl font-bold mb-4 text-textonav text-center">
+        <h2 class="text-xl font-bold mb-4 text-background text-center">
           Ubicación
         </h2>
         <div
-          class="bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] translate-x-[-6px] translate-y-[-6px] transition-all duration-300 hover:translate-x-[-6px] hover:translate-y-[-6px] rounded-xl overflow-hidden mb-3 w-full"
+          class="bg-texto translate-x-[-6px] translate-y-[-6px] transition-all duration-300 hover:translate-x-[-6px] hover:translate-y-[-6px] rounded-xl overflow-hidden mb-3 w-full"
         >
           <div id="map" class="w-full h-[250px] md:h-[350px]"></div>
         </div>
-        <p class="font-light opacity-50 text-textonav text-center">
+        <p class="font-light opacity-50 text-background text-center">
           Lavalle 695, B1878 Quilmes, Provincia de Buenos Aires
         </p>
-        <p class="font-light opacity-50 text-textonav text-center">
+        <p class="font-light opacity-50 text-background text-center">
           <i class="fas fa-envelope mr-1"></i
           >consultas@estudiodresrodriguez.com.ar
         </p>
-        <p class="font-light opacity-50 text-textonav text-center">
+        <p class="font-light opacity-50 text-background text-center">
           <i class="fas fa-phone mr-1"></i>(+54) 11 4444-5555
         </p>
         <!-- Redes sociales -->
         <div
           class="flex flex-row lg:flex-row items-center lg:items-center lg:balance-around mt-2"
         >
-          <a class="text-textonav hover:text-naranja transition" href="#"
+          <a class="text-background hover:text-naranja transition" href="#"
             ><i class="fab fa-instagram text-3xl m-2.5"></i>Instagram</a
           >
-          <a class="text-textonav hover:text-naranja transition" href="#"
+          <a class="text-background hover:text-naranja transition" href="#"
             ><i class="fab fa-facebook text-3xl m-2.5"></i>Facebook</a
-          >
-          <a class="text-textonav hover:text-naranja transition" href="#"
-            ><i class="fab fa-linkedin text-3xl m-2.5"></i>Linkedin</a
           >
         </div>
       </div>
 
       <!-- Preguntas frecuentes -->
-      <div
-        class="w-full lg:w-[500px] bg-textonav text-textonav border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center balance-start"
+     <!--  <div
+        class="w-full lg:w-[500px] bg-bgheader text-textonav    rounded-xl transition-all duration-300 p-6 flex flex-col items-center balance-start"
       >
         <h3
           class="text-md font-extrabold select-none uppercase tracking-wider text-center"
@@ -53,10 +50,10 @@
         </h3>
 
         <div class="w-full mt-4 grid grid-cols-1 lg:grid-cols-2 gap-4">
-          <!-- Reutilizamos esta estructura para cada pregunta -->
-          <div class="border-b border-black pb-2">
+           Reutilizamos esta estructura para cada pregunta 
+          <div class="border-b pb-2">
             <button
-              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-textonav hover:text-texto uppercase"
+              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-bgheader hover:text-texto uppercase"
             >
               ¿Cómo sé si necesito un abogado?
               <span class="text-lg font-bold">+</span>
@@ -69,9 +66,9 @@
             </div>
           </div>
 
-          <div class="border-b border-black pb-2">
+          <div class="border-b  pb-2">
             <button
-              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-textonav hover:text-texto uppercase"
+              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-bgheader hover:text-texto uppercase"
             >
               ¿Cuánto cuesta una consulta inicial?
               <span class="text-lg font-bold">+</span>
@@ -84,9 +81,9 @@
             </div>
           </div>
 
-          <div class="border-b border-black pb-2">
+          <div class="border-b  pb-2">
             <button
-              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-textonav hover:text-texto uppercase"
+              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-bgheader hover:text-texto uppercase"
             >
               ¿Qué tipo de casos manejan?
               <span class="text-lg font-bold">+</span>
@@ -98,9 +95,9 @@
             </div>
           </div>
 
-          <div class="border-b border-black pb-2">
+          <div class="border-b  pb-2">
             <button
-              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-textonav hover:text-texto uppercase"
+              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-bgheader hover:text-texto uppercase"
             >
               ¿Cuánto dura un proceso legal?
               <span class="text-lg font-bold">+</span>
@@ -113,9 +110,9 @@
             </div>
           </div>
 
-          <div class="border-b border-black pb-2">
+          <div class="border-b  pb-2">
             <button
-              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-textonav hover:text-texto uppercase"
+              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-bgheader hover:text-texto uppercase"
             >
               ¿Qué documentos necesito para iniciar un trámite legal?
               <span class="text-lg font-bold">+</span>
@@ -128,9 +125,9 @@
             </div>
           </div>
 
-          <div class="border-b border-black pb-2">
+          <div class="border-b  pb-2">
             <button
-              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-textonav hover:text-texto uppercase"
+              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-bgheader hover:text-texto uppercase"
             >
               ¿Puedo comunicarme con mi abogado fácilmente?
               <span class="text-lg font-bold">+</span>
@@ -142,9 +139,9 @@
             </div>
           </div>
 
-          <div class="border-b border-black pb-2">
+          <div class="border-b  pb-2">
             <button
-              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-textonav hover:text-texto uppercase"
+              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-bgheader hover:text-texto uppercase"
             >
               ¿Qué pasa si pierdo el juicio?
               <span class="text-lg font-bold">+</span>
@@ -157,9 +154,9 @@
             </div>
           </div>
 
-          <div class="border-b border-black pb-2">
+          <div class="border-b  pb-2">
             <button
-              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-textonav hover:text-texto uppercase"
+              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-bgheader hover:text-texto uppercase"
             >
               ¿Pueden representarme en todo el país?
               <span class="text-lg font-bold">+</span>
@@ -172,9 +169,9 @@
             </div>
           </div>
 
-          <div class="border-b border-black pb-2 col-span-full">
+          <div class="border-b  pb-2 col-span-full">
             <button
-              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-textonav hover:text-texto uppercase"
+              class="bg-naranja faq-question w-full text-left text-md font-medium flex balance-between items-center hover:bg-bgheader hover:text-texto uppercase"
             >
               ¿Qué diferencia a su estudio de otros abogados?
               <span class="text-lg font-bold">+</span>
@@ -187,7 +184,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
 
@@ -196,10 +193,10 @@
     <div
       class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-2 text-center md:text-left"
     >
-      <p class="text-textonav text-md font-light">
+      <p class="text-background text-md font-light">
         © 2025 Doctores Rodriguez y Asociados
       </p>
-      <p class="text-textonav text-md">
+      <p class="text-background text-md">
         Desarrollado por
         <a
           href="https://coriadev-porfolio.netlify.app/"
