--- a/public/components/header.html
+++ b/public/components/header.html
@@ -1,108 +1,147 @@
-<header class="bg-texto px-6 md:px-20 py-4 flex items-center justify-between shadow-md h-18 relative" x-data="{ open: false }">
+<header
+  class="bg-texto px-6 md:px-20 py-4 flex items-center justify-between shadow-md h-18 relative"
+  x-data="{ open: false }"
+>
   <!-- Logo -->
-  <a href="#header-container" class="text-2xl text-textonav font-bold"><img class="w-14 h-14 cursor-pointer" src="/PNG-LOGO-BEIGE.png" alt="Logo Beige"></a>
+  <a href="#header-container" class="text-2xl text-textonav font-bold"
+    ><img
+      class="w-14 h-14 cursor-pointer"
+      src="/PNG-LOGO-BEIGE.png"
+      alt="Logo Beige"
+  /></a>
 
   <!-- Botón menú hamburguesa (visible solo en mobile) -->
-  <button @click="open = !open" class="md:hidden text-textonav focus:outline-none">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path x-show="!open" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M4 6h16M4 12h16M4 18h16" />
-      <path x-show="open" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M6 18L18 6M6 6l12 12" />
+  <button
+    @click="open = !open"
+    class="md:hidden text-textonav focus:outline-none"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="h-6 w-6"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+    >
+      <path
+        x-show="!open"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M4 6h16M4 12h16M4 18h16"
+      />
+      <path
+        x-show="open"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M6 18L18 6M6 6l12 12"
+      />
     </svg>
   </button>
 
   <!-- Navegación desktop -->
   <nav class="hidden md:flex space-x-4">
-    <a href="#header-container" class="inline-block rounded-xl px-3 py-2 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
+    <a
+      href="#header-container"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto hover:border-2 hover:border-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+    >
       Home
     </a>
-    
-    <a href="#sobrenos-container" class="inline-block rounded-xl px-3 py-2 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
+
+    <a
+      href="#sobrenos-container"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto hover:border-2 hover:border-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+    >
       Sobre Nosotros
     </a>
-    
-    <a href="#servicios-container" class="inline-block rounded-xl px-3 py-2 border-[2px] border-black  bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
+
+    <a
+      href="#servicios-container"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto hover:border-2 hover:border-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+    >
       nuestros servicios
     </a>
 
-    <a href="#footer-container" class="inline-block rounded-xl px-3 py-2 border-[2px] border-black  bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
+    <a
+      href="#footer-container"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto hover:border-2 hover:border-textonav"
+    >
       Información y contacto
     </a>
-    
-    <a href="https://wa.link/k1ktf5" target="_blank" class="inline-block rounded-xl px-3 py-2 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] hover:shadow-[1px_1px_0_#000] hover:bg-naranja/90 active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
-      CONSULTA AL WPP
-    </a>
-    
+
   </nav>
 
   <!-- Navegación mobile -->
-  <nav x-show="open"
-  x-transition:enter="transition ease-out duration-500"
-  x-transition:enter-start="opacity-0 transform -translate-y-2"
-  x-transition:enter-end="opacity-100 transform translate-y-0"
-  x-transition:leave="transition ease-in duration-200"
-  x-transition:leave-start="opacity-100 transform translate-y-0"
-  x-transition:leave-end="opacity-0 transform -translate-y-2"
-  class="absolute top-full left-0 w-full bg-texto flex flex-col items-start p-4 space-y-2 md:hidden z-50 shadow-md">
+  <nav
+    x-show="open"
+    x-transition:enter="transition ease-out duration-500"
+    x-transition:enter-start="opacity-0 transform -translate-y-2"
+    x-transition:enter-end="opacity-100 transform translate-y-0"
+    x-transition:leave="transition ease-in duration-200"
+    x-transition:leave-start="opacity-100 transform translate-y-0"
+    x-transition:leave-end="opacity-0 transform -translate-y-2"
+    class="absolute top-full left-0 w-full bg-texto flex flex-col items-start p-4 space-y-2 md:hidden z-50 shadow-md"
+  >
+    <a
+      href="#"
+      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black transition-all duration-200 hover:translate-x-[1px] hover:bg-background hover:text-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+    >
+      Home
+    </a>
 
-  <a href="#" class="inline-block rounded-xl px-3 py-1 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
-    Home
-  </a>
-  
-  <a href="#" class="inline-block rounded-xl px-3 py-1 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
-    Sobre Nosotros
-  </a>
-  
-  <a href="#" class="inline-block rounded-xl px-3 py-1 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
-    Nuestros servicios
-  </a>
-  
-  <a href="https://wa.link/k1ktf5" target="_blank" class="inline-block rounded-xl px-3 py-1 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] hover:shadow-[1px_1px_0_#000] hover:bg-naranja/90 active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
-    CONSULTA AL WPP
-  </a>
-  
-  
+    <a
+      href="#"
+      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black transition-all duration-200 hover:translate-x-[1px] hover:bg-background hover:text-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+    >
+      Sobre Nosotros
+    </a>
+
+    <a
+      href="#"
+      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black transition-all duration-200 hover:translate-x-[1px] hover:bg-background hover:text-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+    >
+      Nuestros servicios
+    </a>
   </nav>
 
-<!-- 📌 Menú lateral que aparece al hacer scroll -->
-<div x-data="{ show: false }" x-init="
+  <!-- 📌 Menú lateral que aparece al hacer scroll -->
+  <div
+    x-data="{ show: false }"
+    x-init="
   window.addEventListener('scroll', () => {
     show = window.scrollY > 300;
   });
-" x-show="show"
-x-transition
-class="fixed top-1/4 left-4 z-40 flex-col space-y-3 hidden lg:flex"
->
+"
+    x-show="show"
+    x-transition
+    class="fixed top-1/4 left-4 z-40 flex-col space-y-3 hidden lg:flex"
+  >
+    <a
+      href="#header-container"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold transition-all duration-200 hover:translate-x-[1px] border-2 active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+    >
+      Home
+    </a>
 
-  <a href="#header-container" class="inline-block rounded-xl px-3 py-2 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] 
-    transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] 
-    hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto 
-    active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
-    Home
-  </a>
+    <a
+      href="#sobrenos-container"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold transition-all duration-200 hover:translate-x-[1px] border-2 active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+    >
+      Sobre Nosotros
+    </a>
 
-  <a href="#sobrenos-container" class="inline-block rounded-xl px-3 py-2 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] 
-    transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] 
-    hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto 
-    active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
-    Sobre Nosotros
-  </a>
+    <a
+      href="#servicios-container"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold transition-all duration-200 hover:translate-x-[1px] border-2 active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+    >
+      Nuestros servicios
+    </a>
 
-  <a href="#servicios-container" class="inline-block rounded-xl px-3 py-2 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] 
-    transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] 
-    hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto 
-    active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
-    Nuestros servicios
-  </a>
-
-  <a href="#footer-container" class="inline-block rounded-xl px-3 py-2 border-[2px] border-black bg-naranja text-textonav text-sm font-semibold shadow-[2px_2px_0_#000] 
-    transition-all duration-200 hover:translate-x-[1px] hover:translate-y-[1px] 
-    hover:shadow-[1px_1px_0_#000] hover:bg-background hover:text-texto 
-    active:translate-x-[2px] active:translate-y-[2px] active:shadow-none">
-    Información y contacto
-  </a>
-
-</div>
-
+    <a
+      href="#footer-container"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold transition-all duration-200 hover:translate-x-[1px] border-2 active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+    >
+      Información y contacto
+    </a>
+  </div>
 </header>
