Cambios en info de servicios, footer y modificacion de tamaños en algunos casos

--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -30,12 +30,12 @@
         <div
           class="flex flex-row lg:flex-row items-center lg:items-center lg:balance-around mt-2"
         >
-          <a class="text-background hover:text-naranja transition" href="#"
+          <a class="text-background hover:text-naranja transition" href="https://www.instagram.com/estudiodoctoresrodriguez/"
             ><i class="fab fa-instagram text-3xl m-2.5"></i>Instagram</a
           >
-          <a class="text-background hover:text-naranja transition" href="#"
+<!--           <a class="text-background hover:text-naranja transition" href="#"
             ><i class="fab fa-facebook text-3xl m-2.5"></i>Facebook</a
-          >
+          > -->
         </div>
       </div>
 
