--- a/public/components/header.html
+++ b/public/components/header.html
@@ -43,28 +43,28 @@
   <nav class="hidden md:flex space-x-4">
     <a
       href="#header-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto hover:border-2 hover:border-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto border-2 hover:border-textonav   active:shadow-none"
     >
       Home
     </a>
 
     <a
       href="#sobrenos-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto hover:border-2 hover:border-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto border-2 hover:border-textonav   active:shadow-none"
     >
       Sobre Nosotros
     </a>
 
     <a
       href="#servicios-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto hover:border-2 hover:border-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto border-2 hover:border-textonav   active:shadow-none"
     >
       nuestros servicios
     </a>
 
     <a
       href="#footer-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto hover:border-2 hover:border-textonav"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto border-2 hover:border-textonav"
     >
       Información y contacto
     </a>
@@ -84,21 +84,21 @@
   >
     <a
       href="#"
-      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black transition-all duration-200 hover:translate-x-[1px] hover:bg-background hover:text-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black    hover:bg-background hover:text-textonav   active:shadow-none"
     >
       Home
     </a>
 
     <a
       href="#"
-      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black transition-all duration-200 hover:translate-x-[1px] hover:bg-background hover:text-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black    hover:bg-background hover:text-textonav   active:shadow-none"
     >
       Sobre Nosotros
     </a>
 
     <a
       href="#"
-      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black transition-all duration-200 hover:translate-x-[1px] hover:bg-background hover:text-textonav active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black    hover:bg-background hover:text-textonav   active:shadow-none"
     >
       Nuestros servicios
     </a>
@@ -118,28 +118,28 @@
   >
     <a
       href="#header-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold transition-all duration-200 hover:translate-x-[1px] border-2 active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold    border-2   active:shadow-none"
     >
       Home
     </a>
 
     <a
       href="#sobrenos-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold transition-all duration-200 hover:translate-x-[1px] border-2 active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold    border-2   active:shadow-none"
     >
       Sobre Nosotros
     </a>
 
     <a
       href="#servicios-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold transition-all duration-200 hover:translate-x-[1px] border-2 active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold    border-2   active:shadow-none"
     >
       Nuestros servicios
     </a>
 
     <a
       href="#footer-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold transition-all duration-200 hover:translate-x-[1px] border-2 active:translate-x-[2px] active:translate-y-[2px] active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold    border-2   active:shadow-none"
     >
       Información y contacto
     </a>
