--- a/public/components/servicios.html
+++ b/public/components/servicios.html
@@ -41,21 +41,10 @@
           class="flex flex-col justify-center items-center"
         >
           <p class="text-lg text-justify font-medium text-background prose-p">
-            Nunca un hecho es igual a otro; puede tener similitudes, pero jamás
-            va a ser idéntico; así como tampoco es igual la evolución médica que
-            tenga una persona respecto de otra; por eso es importante que nos
-            llames y nos cuentes qué es lo que te pasó. Nuestros abogados junto
-            al grupo de médicos legistas que nos ayudan te brindarán el mejor
-            asesoramiento. A continuación, te contamos algunas situaciones que
-            pueden suceder, pero sólo a modo de ejemplo. Nuestro objetivo es
-            tratar a cada cliente en forma personal, entendiendo que quien sufre
-            un accidente padece, además de la lesión, angustias por no saber
-            cuál será su futuro, y merece que se lo escuche y se le explique con
-            detalles cuáles son sus derechos y cuál es la acción más conveniente
-            a seguir para su caso.
+            Nunca un hecho es igual a otro; puede tener similitudes, pero jamás va a ser idéntico; así como tampoco es igual la evolución médica que tenga una persona respecto de otra; por eso es importante que nos llames y nos cuentes qué es lo que te pasó. Nuestros abogados junto al grupo de médicos legistas que nos ayudan te brindarán el mejor asesoramiento.
           </p>
           <a href="" class=" m-3 px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
-            <i class="fab fa-whatsapp text-xl mr-0.5 text-center text-[green]"></i>
+            <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
               CONSULTANOS
             </a>
         </div>
@@ -92,11 +81,9 @@
         >
           <p class="text-lg text-justify font-medium text-background prose-p">
             Durante más de 25 años nos hemos dedicado a realizar reclamos por los daños y perjuicios sufridos por víctimas de accidentes de tránsito. Podemos afirmar que no existen dos casos iguales. Las consecuencias de cada siniestro varían, y deben ser tratadas en forma personalizada. 
-            Nos comprometemos a escucharte, asesorarte y brindarte el más eficaz servicio para que puedas percibir tu debida indemnización. 
-            Somos conscientes de que sufrís, que tenés expectativas y que estamos obligados a ser objetivos en nuestro asesoramiento. Ponete en contacto con nosotros y arreglaremos una entrevista, personal o a través de videollamada. 
           </p>
           <a href="" class=" m-3 px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
-            <i class="fab fa-whatsapp text-xl mr-0.5 text-center text-[green]"></i>
+            <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
               CONSULTANOS
             </a>
         </div>
@@ -135,7 +122,7 @@
             Lo mejor que podés hacer es llamarnos, mantener una entrevista, comentarnos tu caso particular y te vamos a poder dar el mejor consejo.
           </p>
           <a href="" class=" m-3 px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
-            <i class="fab fa-whatsapp text-xl mr-0.5 text-center text-[green]"></i>
+            <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
               CONSULTANOS
             </a>
         </div>
@@ -173,7 +160,7 @@
             El departamento de derecho penal esta a cargo de las Dras. Laura FECCHINO y Andrea NOVELLO, quienes cuentan con una larga experiencia actuando ante la Justicia Federal, Nacional y Provincial; tanto durante la etapa de investigación como de debate oral, como defensoras o querellantes. Comunicate, concretá una entrevista y te contamos nuestra forma de trabajo.
           </p>
           <a href="" class=" m-3 px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
-            <i class="fab fa-whatsapp text-xl mr-0.5 text-center text-[green]"></i>
+            <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
               CONSULTANOS
             </a>
         </div>
@@ -210,20 +197,11 @@
               Si bien muchas veces puede ser un proceso doloroso por el ser querido fallecido, lo cierto es que resulta indispensable para que cada uno de los herederos pueda disponer del porcentaje que le corresponde, iniciar el proceso sucesorio. No existe otra manera de ser declarado heredero que a través de ese proceso. Consúltanos y te contamos cuáles son tus derechos y cuáles los costos de nuestra intervención.
             </p>
             <a href="" class=" m-3 px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
-              <i class="fab fa-whatsapp text-xl mr-0.5 text-center text-[green]"></i>
+              <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
                 CONSULTANOS
               </a>
           </div>
         </div>
     </div>
-
-<!-- COLORES PAGINA 
-BACKGROUND: 
-TEXTO: 
-TARJETAS: 
-TEXTO-SECUNDARIO: 
--->
-
-
   </div>
 </section>
