Cambios en info de servicios, footer y modificacion de tamaños en algunos casos

--- a/public/components/servicios.html
+++ b/public/components/servicios.html
@@ -41,7 +41,9 @@
           class="flex flex-col justify-center items-center"
         >
           <p class="text-lg text-justify font-medium text-background prose-p">
-            Nunca un hecho es igual a otro; puede tener similitudes, pero jamás va a ser idéntico; así como tampoco es igual la evolución médica que tenga una persona respecto de otra; por eso es importante que nos llames y nos cuentes qué es lo que te pasó. Nuestros abogados junto al grupo de médicos legistas que nos ayudan te brindarán el mejor asesoramiento.
+            Nunca un hecho es igual a otro; puede tener similitudes, pero jamás va a ser idéntico; así como tampoco es igual la evolución médica que tenga una persona respecto de otra; por eso es importante que nos llames y nos cuentes qué es lo que te pasó. Nuestros abogados junto al grupo de médicos legistas que nos ayudan te brindarán el mejor asesoramiento. 
+            Nuestro objetivo es tratar a cada cliente en forma personal, entendiendo que quien sufre un accidente padece, además de la lesión, angustias por no saber cuál será su futuro, y merece que se lo escuche y se le explique con detalles cuáles son sus derechos y cuál es la acción más conveniente a seguir para que pueda percibir la indemnización establecida por la Ley de Riesgos del Trabajo.
+            
           </p>
           <a href="" class=" m-3 px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
             <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
@@ -80,7 +82,9 @@
           class="flex flex-col justify-center items-center"
         >
           <p class="text-lg text-justify font-medium text-background prose-p">
-            Durante más de 25 años nos hemos dedicado a realizar reclamos por los daños y perjuicios sufridos por víctimas de accidentes de tránsito. Podemos afirmar que no existen dos casos iguales. Las consecuencias de cada siniestro varían, y deben ser tratadas en forma personalizada. 
+            Durante más de 25 años nos dedicado a realizar reclamos por los daños y perjuicios sufridos por víctimas de accidentes de tránsito. Podemos afirmar que no existen dos casos iguales. Las consecuencias de cada siniestro varían, y deben ser tratadas en forma personalizada. 
+            Nos comprometemos a escucharte, asesorarte y brindarte el más eficaz servicio para que puedas percibir tu debida indemnización. 
+            Somos conscientes de que sufrís, que tenés expectativas y que estamos obligados a ser objetivos en nuestro asesoramiento. Contáctate con nosotros y arreglaremos una entrevista personal o a través de videollamada.             
           </p>
           <a href="" class=" m-3 px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
             <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
@@ -118,8 +122,9 @@
           class="flex flex-col justify-center items-center"
         >
           <p class="text-lg text-justify font-medium text-background prose-p">
-            La cantidad de situaciones que pueden producirse en una relación laboral son muy diversas; cada caso en particular debe ser analizado por un profesional especializado en Derecho del Trabajo. 
-            Lo mejor que podés hacer es llamarnos, mantener una entrevista, comentarnos tu caso particular y te vamos a poder dar el mejor consejo.
+            La cantidad de situaciones que pueden producirse en una relación laboral son muy diversas; que van desde trabajos no registrados, incorrecta categorización de las labores realizadas por el empleado, pago de un salario incorrecto, etc.  Por eso cada situación debe ser analizada por un profesional especializado en Derecho del Trabajo, este te asesorara y explicara cuales son los pasos a seguir conforme lo determina la Ley. 
+            Durante nuestra larga trayectoria hemos representado a trabajadores y empresas, lo que nos ha permitido tener un amplio conocimiento y entendimiento de las expectativas de cada parte. Ponemos ese conocimiento a tu disposición. Entrevístate con nosotros por el medio de comunicación que elijas y plantéanos tus inquietudes.  
+            
           </p>
           <a href="" class=" m-3 px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
             <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
@@ -157,7 +162,7 @@
           class="flex flex-col justify-center items-center"
         >
           <p class="text-lg text-justify font-medium text-background prose-p">
-            El departamento de derecho penal esta a cargo de las Dras. Laura FECCHINO y Andrea NOVELLO, quienes cuentan con una larga experiencia actuando ante la Justicia Federal, Nacional y Provincial; tanto durante la etapa de investigación como de debate oral, como defensoras o querellantes. Comunicate, concretá una entrevista y te contamos nuestra forma de trabajo.
+            El departamento de derecho penal esta a cargo de las Dras. Laura FECCHINO y Andrea NOVELLO, quienes cuentan con una larga experiencia actuando ante la Justicia Federal, Nacional y Provincial; tanto durante la etapa de investigación como de debate oral, como defensoras o querellantes. Comunícate, concretaremos una entrevista para que nos cuentes tu situación y estableceremos los pasos a seguir dependiendo de cada situación particular.
           </p>
           <a href="" class=" m-3 px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
             <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
@@ -193,8 +198,7 @@
             class="flex flex-col justify-center items-center"
           >
             <p class="text-lg text-justify font-medium text-background prose-p">
-              Al fallecer un familiar y éste dejar bienes, la cantidad de preguntas que te pueden surgir son muchas, tanto en relación a si tenés derecho sobre lo que dejó, como qué hacer frente a otro heredero que dispone de éstos como si fuera el único con derecho. Lo peor que podés hacer es no hacer nada. 
-              Si bien muchas veces puede ser un proceso doloroso por el ser querido fallecido, lo cierto es que resulta indispensable para que cada uno de los herederos pueda disponer del porcentaje que le corresponde, iniciar el proceso sucesorio. No existe otra manera de ser declarado heredero que a través de ese proceso. Consúltanos y te contamos cuáles son tus derechos y cuáles los costos de nuestra intervención.
+              Al fallecer un familiar, además del dolor, tenemos que resolver la situación del patrimonio que ha dejado, establecer quienes tienen derechos sobre los bienes, no siempre es una tarea fácil, pero que debe ser realizada, Resulta indispensable para que cada uno de los herederos pueda disponer del porcentaje que le corresponde, iniciar el proceso sucesorio. No existe otra manera de ser declarado heredero que a través de la Declaratoria de Herederos. Consúltanos y te contamos cuáles son tus derechos y cuáles los costos de nuestra intervención.
             </p>
             <a href="" class=" m-3 px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
               <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
