Cambios en info de servicios, footer y modificacion de tamaños en algunos casos

--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -30,7 +30,7 @@
         <div
           class="flex flex-row lg:flex-row items-center lg:items-center lg:balance-around mt-2"
         >
-          <a class="text-background hover:text-naranja transition" href="https://www.instagram.com/estudiodoctoresrodriguez/"
+          <a class="text-background hover:underline transition" target="_blank" href="https://www.instagram.com/estudiodoctoresrodriguez/"
             ><i class="fab fa-instagram text-3xl m-2.5"></i>Instagram</a
           >
 <!--           <a class="text-background hover:text-naranja transition" href="#"
