--- a/public/components/servicios.html
+++ b/public/components/servicios.html
@@ -22,7 +22,7 @@
           <h3 class="text-background font-bold text-xl uppercase text-center">
             Accidentes y enfermedades laborales
           </h3>
-          <i class="fas fa-car-burst text-7xl text-background"></i>
+          <img src="../lesion-laboral.png" class="w-32 h-32" alt="">
           <button
             @click="open = !open"
             class="w-full px-4 py-2 bg-naranja text-background font-bold transition-all hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase"
@@ -63,7 +63,7 @@
           <h3 class="text-background font-bold text-xl uppercase text-center">
             Accidentes de transito
           </h3>
-          <i class="fas fa-car-burst text-7xl text-background"></i>
+          <img src="../colision-de-coche.png" class="w-32 h-32" alt="">
           <button
             @click="open = !open"
             class="w-full px-4 py-2 bg-naranja text-background font-bold transition-all hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase"
@@ -103,7 +103,7 @@
           <h3 class="text-background font-bold text-xl uppercase text-center">
             despidos
           </h3>
-          <i class="fas fa-car-burst text-7xl text-background"></i>
+          <img src="../despido.png" class="w-32 h-32" alt="">
           <button
             @click="open = !open"
             class="w-full px-4 py-2 bg-naranja text-background font-bold transition-all hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase"
@@ -143,7 +143,7 @@
           <h3 class="text-background font-bold text-xl uppercase text-center">
             Derecho Penal
           </h3>
-          <i class="fas fa-car-burst text-7xl text-background"></i>
+          <img src="../derecho-penal.png" class="w-32 h-32" alt="">
           <button
             @click="open = !open"
             class="w-full px-4 py-2 bg-naranja text-background font-bold transition-all hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase"
@@ -179,7 +179,7 @@
             <h3 class="text-background font-bold text-xl uppercase text-center">
               SUCESIONES
             </h3>
-            <i class="fas fa-car-burst text-7xl text-background"></i>
+            <img src="../derecho-fiduciario-y-patrimonial.png" class="w-32 h-32" alt="">
             <button
               @click="open = !open"
               class="w-full px-4 py-2 bg-naranja text-background font-bold transition-all hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase"
