--- a/public/components/header.html
+++ b/public/components/header.html
@@ -40,24 +40,24 @@
   </button>
 
   <!-- Navegación desktop -->
-  <nav class="hidden md:flex space-x-4">
+  <nav class="hidden md:flex lg:flex space-x-4">
     <a
       href="#header-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto border-2 hover:border-textonav   active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 md:px-2 md:py-1 lg:px-3 lg:py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto border-2 hover:border-textonav active:shadow-none"
     >
       Home
     </a>
 
     <a
       href="#sobrenos-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto border-2 hover:border-textonav   active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto border-2 hover:border-textonav active:shadow-none"
     >
       Sobre Nosotros
     </a>
 
     <a
       href="#servicios-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto border-2 hover:border-textonav   active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background text-sm font-semibold hover:bg-background hover:text-texto border-2 hover:border-textonav active:shadow-none"
     >
       nuestros servicios
     </a>
@@ -68,7 +68,6 @@
     >
       Información y contacto
     </a>
-
   </nav>
 
   <!-- Navegación mobile -->
@@ -83,24 +82,30 @@
     class="absolute top-full left-0 w-full bg-texto flex flex-col items-start p-4 space-y-2 md:hidden z-50 shadow-md"
   >
     <a
-      href="#"
-      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black    hover:bg-background hover:text-textonav   active:shadow-none"
+      href="#header-container"
+      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black hover:bg-background hover:text-textonav active:shadow-none"
     >
       Home
     </a>
 
     <a
-      href="#"
-      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black    hover:bg-background hover:text-textonav   active:shadow-none"
+      href="#sobrenos-container"
+      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black hover:bg-background hover:text-textonav active:shadow-none"
     >
       Sobre Nosotros
     </a>
 
     <a
-      href="#"
-      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black    hover:bg-background hover:text-textonav   active:shadow-none"
+      href="#servicios-container"
+      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black hover:bg-background hover:text-textonav active:shadow-none"
     >
       Nuestros servicios
+    </a>
+    <a
+      href="#footer-container"
+      class="inline-block rounded-xl px-3 py-1 bg-naranja text-background text-sm font-semibold border-black hover:bg-background hover:text-textonav active:shadow-none"
+    >
+      Información y Contacto
     </a>
   </nav>
 
@@ -118,28 +123,28 @@
   >
     <a
       href="#header-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold    border-2   active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold border-2 active:shadow-none"
     >
       Home
     </a>
 
     <a
       href="#sobrenos-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold    border-2   active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold border-2 active:shadow-none"
     >
       Sobre Nosotros
     </a>
 
     <a
       href="#servicios-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold    border-2   active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold border-2 active:shadow-none"
     >
       Nuestros servicios
     </a>
 
     <a
       href="#footer-container"
-      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold    border-2   active:shadow-none"
+      class="inline-block rounded-xl px-3 py-2 bg-naranja text-background hover:bg-background hover:text-texto text-sm font-semibold border-2 active:shadow-none"
     >
       Información y contacto
     </a>
