--- a/public/components/sobrenos.html
+++ b/public/components/sobrenos.html
@@ -11,7 +11,7 @@
       class="border-t-2 border-texto w-15 sm:w-25 md:w-35 lg:w-45 mx-auto mb-4"
     />
     <p
-      class="text-texto font-light w-[100%] sm:w-[80%] md:w-[70%] lg:w-[50%] prose-p: prose-2xl text-justify"
+      class="text-texto font-light w-[100%] sm:w-[80%] md:w-[70%] lg:w-[50%] prose-xl md:prose-xl lg:prose-p lg:prose-2xl text-justify"
     >
     Contamos con más de 25 años de trayectoria y experiencia, empeñado en brindar a nuestros representados un servicio profesional eficaz, que permita alcanzar los objetivos propuestos. Contamos con un equipo de profesionales altamente capacitado, con una sólida experiencia en las siguientes áreas del derecho: ACCIDENTES DE TRÁNSITO; ACCIDENTES LABORALES; DESPIDOS; SUCESIONES Y DERECHO PENAL.
     Nuestros letrados se encuentran comprometido a ofrecer un servicio de calidad, basado en la ética, la confidencialidad, el respeto, y profesionalismo. 
