--- a/public/components/main.html
+++ b/public/components/main.html
@@ -11,7 +11,7 @@
       </div>
   
       <div class="mt-6 p-2 flex flex-col items-center">
-        <a href="" class="px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
+        <a href="https://wa.link/g1qbfy" target="_blank" class="px-4 py-2 rounded-xl text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
           <i class="fab fa-whatsapp text-2xl mr-0.5 text-center text-[green]"></i>
             CONSULTANOS
           </a>
