--- a/public/components/servicios.html
+++ b/public/components/servicios.html
@@ -45,7 +45,7 @@
             Nuestro objetivo es tratar a cada cliente en forma personal, entendiendo que quien sufre un accidente padece, además de la lesión, angustias por no saber cuál será su futuro, y merece que se lo escuche y se le explique con detalles cuáles son sus derechos y cuál es la acción más conveniente a seguir para que pueda percibir la indemnización establecida por la Ley de Riesgos del Trabajo.
             
           </p>
-          <a href="" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
+          <a href="https://wa.link/g1qbfy" target="_blank" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
             <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
               CONSULTANOS
             </a>
@@ -86,7 +86,7 @@
             Nos comprometemos a escucharte, asesorarte y brindarte el más eficaz servicio para que puedas percibir tu debida indemnización. 
             Somos conscientes de que sufrís, que tenés expectativas y que estamos obligados a ser objetivos en nuestro asesoramiento. Contáctate con nosotros y arreglaremos una entrevista personal o a través de videollamada.             
           </p>
-          <a href="" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
+          <a href="https://wa.link/g1qbfy" target="_blank" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
             <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
               CONSULTANOS
             </a>
@@ -126,7 +126,7 @@
             Durante nuestra larga trayectoria hemos representado a trabajadores y empresas, lo que nos ha permitido tener un amplio conocimiento y entendimiento de las expectativas de cada parte. Ponemos ese conocimiento a tu disposición. Entrevístate con nosotros por el medio de comunicación que elijas y plantéanos tus inquietudes.  
             
           </p>
-          <a href="" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
+          <a href="https://wa.link/g1qbfy" target="_blank" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
             <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
               CONSULTANOS
             </a>
@@ -164,7 +164,7 @@
           <p class="text-lg text-justify font-medium text-background prose-p">
             El departamento de derecho penal esta a cargo de las Dras. Laura FECCHINO y Andrea NOVELLO, quienes cuentan con una larga experiencia actuando ante la Justicia Federal, Nacional y Provincial; tanto durante la etapa de investigación como de debate oral, como defensoras o querellantes. Comunícate, concretaremos una entrevista para que nos cuentes tu situación y estableceremos los pasos a seguir dependiendo de cada situación particular.
           </p>
-          <a href="" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
+          <a href="https://wa.link/g1qbfy" target="_blank" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
             <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
               CONSULTANOS
             </a>
@@ -200,7 +200,7 @@
             <p class="text-lg text-justify font-medium text-background prose-p">
               Al fallecer un familiar, además del dolor, tenemos que resolver la situación del patrimonio que ha dejado, establecer quienes tienen derechos sobre los bienes, no siempre es una tarea fácil, pero que debe ser realizada, Resulta indispensable para que cada uno de los herederos pueda disponer del porcentaje que le corresponde, iniciar el proceso sucesorio. No existe otra manera de ser declarado heredero que a través de la Declaratoria de Herederos. Consúltanos y te contamos cuáles son tus derechos y cuáles los costos de nuestra intervención.
             </p>
-            <a href="" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
+            <a href="https://wa.link/g1qbfy" target="_blank" class=" m-3 px-4 py-2 rounded-xl text-xl md:text-2xl lg:text-3xl border-2 bg-naranja  text-background font-bold hover:bg-background hover:border-[2px] hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
               <i class="fab fa-whatsapp text-3xl mr-0.5 text-center text-[green]"></i>
                 CONSULTANOS
               </a>
