--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -24,23 +24,26 @@
           >consultas@estudiodresrodriguez.com.ar
         </p>
         <p class="font-light opacity-50 text-background text-center">
-          <i class="fas fa-phone mr-1"></i>(+54) 11 4444-5555
+          <i class="fas fa-phone mr-1"></i>(+54) 11 2533-6187
         </p>
         <!-- Redes sociales -->
         <div
           class="flex flex-row lg:flex-row items-center lg:items-center lg:balance-around mt-2"
         >
-          <a class="text-background hover:underline transition" target="_blank" href="https://www.instagram.com/estudiodoctoresrodriguez/"
+          <a
+            class="text-background hover:underline transition"
+            target="_blank"
+            href="https://www.instagram.com/estudiodoctoresrodriguez/"
             ><i class="fab fa-instagram text-3xl m-2.5"></i>Instagram</a
           >
-<!--           <a class="text-background hover:text-naranja transition" href="#"
+          <!--           <a class="text-background hover:text-naranja transition" href="#"
             ><i class="fab fa-facebook text-3xl m-2.5"></i>Facebook</a
           > -->
         </div>
       </div>
 
       <!-- Preguntas frecuentes -->
-     <!--  <div
+      <!--  <div
         class="w-full lg:w-[500px] bg-bgheader text-textonav    rounded-xl transition-all duration-300 p-6 flex flex-col items-center balance-start"
       >
         <h3
